# info2602-campus-eats

./: .env  .gitignore  README.md  database.db
app/: auth.py  database.py  main.py
app/models/: __init__.py
app/routers/: admin.py  auth.py  places.py  reviews.py  shared.py
app/static/css/: styles.css
app/templates/: admin_menu_form.html  admin_place_form.html  admin_places.html  base.html  index.html  login.html  place_detail.html  places.html  signup.html
campus-eats/: pyproject.toml
campus-eats/UNKNOWN.egg-info/: SOURCES.txt
campus-eats/app/: main.py
campus-eats/app/templates/: index.html
campus-eats/campus_eats.egg-info/: SOURCES.txt  requires.txt
campus_eats.egg-info/: PKG-INFO
