[project]
name = "campus-eats"
version = "0.1.0"
description = "Campus Eats project"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlmodel",
    "jinja2",
    "python-multipart",
    "pydantic-settings",
    "email-validator",
    "pyjwt",
    "pwdlib[argon2]"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"